--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
+    "mobx": "^3.1.0",
+    "mobx-react": "^4.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
