--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
+    "mobx-react-devtools": "^4.2.11",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
